# number-classification-api

./: README.md  main.py  pyproject.toml  run.bat
number_classification_api/: main.py
