[tool.poetry]
name = "number-classification-api"
version = "0.1.0"
description = ""
authors = ["agimuche1 <agimuche1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pytz = "^2024"
requests = "^2.31.0"
email-validator = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
requires-python = ">=3.9"
